--- a/public/style.css
+++ b/public/style.css
@@ -4,7 +4,10 @@
 	box-sizing: border-box;
 }
 
-html, body, #app {
+html,
+body,
+#app,
+#display {
 	width: 100%;
 	height: 100%;
 }
@@ -16,26 +19,36 @@ html, body, #app {
 }
 
 #display {
+	padding: 2.5%;
+}
+
+@media only screen and (max-width: 768px) {
+	/* For mobile phones: */
+	#canvas {
+		width: 100%;
+	}
+}
+
+#canvas {
 	/* position: absolute; */
-	width: 500px;
-	height: 500px;
+	max-width: 500px;
+	max-height: 500px;
 	border: 1px solid #d3d3d3;
 }
 
-.visualize {
-	width: fit-content;
-	display: block !important;
-	margin: 1rem auto !important;
+.input-group {
+	margin: 0.5rem 0;
 }
 
-.coordinate {
-	position: absolute;
+input.equation {
+	text-align: center;
+}
+
+.btn.visualize {
 	display: block;
-	width: 1px;
-	height: 1px;
-	background-color: black;
+	margin: 2rem auto;
 }
 
 .hide {
-	display: none
+	display: none;
 }
