--- a/public/style.css
+++ b/public/style.css
@@ -6,20 +6,21 @@
 
 html,
 body,
-#app,
-#display {
+#app {
 	width: 100%;
 	height: 100%;
 }
 
 #app {
-	display: flex;
-	justify-content: center;
-	align-items: center;
+	padding: 2.5%;
 }
 
-#display {
-	padding: 2.5%;
+@media only screen and (min-width: 769px) {
+	/* For desktops: */
+	article {
+		width: 600px;
+		margin: 0 auto;
+	}
 }
 
 @media only screen and (max-width: 768px) {
